# docs/swagger.json
@@ -544,6 +544,26 @@
                     }
                 }
             }
+        },
+        "/test": {
+            "get": {
+                "description": "功能测试",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "测试模块"
+                ],
+                "summary": "功能测试",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
         }
     },
     "definitions": {
